[gd_scene load_steps=9 format=3 uid="uid://doa2vqdtv2x74"]

[ext_resource type="Script" path="res://score.gd" id="1_f34eg"]
[ext_resource type="Texture2D" uid="uid://ciopqbv08j8a6" path="res://assets/Coin.png" id="2_km4p0"]
[ext_resource type="AudioStream" uid="uid://cqamsdvwygdqb" path="res://assets/パッ.mp3" id="2_lvqma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgm0r"]
radius = 9.05539

[sub_resource type="Animation" id="Animation_g05cp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_518ej"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -10), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tiefs"]
_data = {
"RESET": SubResource("Animation_g05cp"),
"idle": SubResource("Animation_518ej")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pk8i"]
size = Vector2(12, 2)

[node name="Score" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_f34eg")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_rgm0r")

[node name="Rect" type="ColorRect" parent="Area2D/CollisionShape2D"]
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
rotation = 0.785398
pivot_offset = Vector2(5, 5)
color = Color(1, 0.92549, 0.509804, 1)

[node name="Coin" type="Sprite2D" parent="Area2D/CollisionShape2D"]
texture = ExtResource("2_km4p0")

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lvqma")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_tiefs")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_8pk8i")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_pickup_sound_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
